Add functions extracting requirements from package

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,6 +1,6 @@
 _src_path: template
-long_name: Padstone
-short_description: A stable foundation for reproducible tests
-short_name: padstone
+long_name: Pile Cap
+short_description: A stable foundation for reproducible builds
+short_name: pilecap
 
 
