--- a/setup.cfg
+++ b/setup.cfg
@@ -1,23 +1,28 @@
 [metadata]
-name = padstone
-version = attr: padstone._version.version
-description = A stable foundation for reproducible tests
+name = pilecap
+version = attr: pilecap._version.version
+description = A stable foundation for reproducible builds
 long_description = file: README.md
 long_description_content_type = text/markdown
-classifiers = Private :: Do not upload to PyPI
+license = MIT
+classifiers = Programming Language :: Python :: 3
 
 [options]
 install_requires =
-    more-itertools
+    build
+    pep517
 package_dir=
     =src
 
 [options.entry_points]
 console_scripts =
-    padstone = padstone.__main__:main
+    pilecap = pilecap.__main__:main
+
+[options.extras_require]
+cli = fire >=0.4
 
 [options.packages.find]
 where = src
 
 [options.package_data]
-padstone = py.typed
+pilecap = py.typed
