--- a/tox.ini
+++ b/tox.ini
@@ -8,4 +8,4 @@ deps =
     coverage
     pytest
 commands =
-    coverage run -p -m pytest --durations=10 --junitxml={toxinidir}/reports/test_status/{envname}.xml --doctest-modules {envsitepackagesdir}/padstone tests/
+    coverage run -p -m pytest --durations=10 --junitxml={toxinidir}/reports/test_status/{envname}.xml --doctest-modules {envsitepackagesdir}/pilecap tests/
