Add install and update commands
Drop use of python fire; while it is great for quick CLIs it has some
sharp edges that, when they can at all be fixed, forces the interface
to become a worse API.

Many other decisions were made that I cannot bother recalling at the
moment.

Compiling constraints using make and pip-tools in unit tests is done
with --no-header or the python version would show up in the output
making it harder to define the expected output.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ ignore_missing_imports = true
 [tool.pylint.MASTER]
 ignore = ["_version.py"]
 
+[tool.pylint.MISCELLANEOUS]
+notes=["FIXME"]
 
 [tool.pylint.format]
 max-line-length = 88
@@ -36,8 +38,9 @@ known-third-party = ["build"]
 
 [tool.pylint.messages_control]
 disable = [
-    "missing-docstring",
+    "invalid-name",
     "bad-continuation",  # for black compatibility
+    "missing-docstring",
 ]
 good-names = []
 bad-names=[]
