--- a/setup.cfg
+++ b/setup.cfg
@@ -5,21 +5,21 @@ description = A stable foundation for reproducible builds
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = MIT
-classifiers = Programming Language :: Python :: 3
+classifiers =
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python :: 3
 
 [options]
 install_requires =
     build
     pep517
+    pip-tools
 package_dir=
     =src
 
 [options.entry_points]
 console_scripts =
     pilecap = pilecap.__main__:main
-
-[options.extras_require]
-cli = fire >=0.4
 
 [options.packages.find]
 where = src
