--- a/.github/workflows/pypackage.yml
+++ b/.github/workflows/pypackage.yml
@@ -13,10 +13,9 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          export PIP_CONSTRAINT=constraints.txt
-          pip install pip setuptools
-          pip install -r constraints.txt
-          pip install .
+          pip install --no-deps .
+          pilecap install .
+          pilecap install
       - name: Check format
         run: make check_format
       - name: Check types
@@ -48,10 +47,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.py }}
-    - name: Bootstrap tox
+    - name: Install dependencies
       run: |
-          export PIP_CONSTRAINT=constraints.txt
-          pip install pip setuptools
-          pip install tox-constraints
-    - name: Run tests in tox
-      run: tox -e py
+          pip install --no-deps .
+          pilecap install .
+          pilecap install -- -r requirements/test.txt
+    - name: Check tests
+      run: make check_tests
